--- a/.gitignore
+++ b/.gitignore
@@ -68,8 +68,7 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
+# dotenv environment variables file testing
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
